# dkinst

./: .gitignore  History.md  README.md  pyproject.toml
Utils/: CreateWheel and clean.cmd  PyPIupload.cmd  Release.cmd  debug.py  pyswitch.py
Utils/helper/: Setup No Extra Folders.cmd  Setup in Edit mode.cmd  SetupDevModeHere.cmd  SetupPackage.cmd
dkinst/: __init__.py  cli.py  install_python_as_admin.cmd  updater.py
dkinst/installers/: _base.py  bashdb.py  brew.py  chocolatey.py  clamav.py  crowdsec.py  docker.py  elastickibana.py  elasticsearch.py  eset_internet_security.py  ffmpeg.py  fibratus.py  git.py  google_chrome.py  krusader.py  mongodb.py  nodejs.py  notepadpp.py  npcap.py  orca.py  pbtk.py  pycharm.py  python.py  pywintrace.py  qbittorrent.py  qtorrent.py  rdp_gpu.py  robocorp.py  rufus.py  snappy_driver_lite.py  snappy_driver_origin.py  tesseract_ocr.py  total_commander.py  virtual_keyboard.py  vlc.py  vmware_tools.py  vs_build_tools_2022.py  winget.py  wireshark.py  wsl.py  (+1 more)
dkinst/installers/helpers/: chocolatey_installer.py  clamav_installer.py  crowdsec_installer.py  docker_installer.py  elastic_manager.py  eset_installer.py  ffmpeg_manager.py  mongodb_installer.py  nodejs_installer.py  npcap_installer.py  pycharm_installer.py  python_manager.py  rdp_gpu_manager.py  snappy_driver_lite_installer.py  tesseract_ocr_manager.py  vs_build_tools_installer.py  winget_installer.py  wsl_manager.py
dkinst/installers/helpers/infra/: appxs.py  chocos.py  commands.py  files.py  folders.py  gui_interaction.py  languages.py  msis.py  permissions.py  pips.py  powershells.py  prereqs.py  prereqs_mod.py  prereqs_uninstall.py  prereqs_uninstall_mod.py  printing.py  processes.py  registrys.py  shortcuts.py  system.py  ubuntu_permissions.py  ubuntu_terminal.py  virtualization.py  win_open_windows.py  winget_fallback_choco.py  wingets.py
dkinst/installers/helpers/modules/: docker_installer.py  elastic_manager.py  mongodb_installer.py  nodejs_installer.py  pycharm_installer.py  wsl_manager.py  (+1 more)
dkinst/prereqs/: install_dkinst_pipx_debian.sh  install_python_as_admin_win.cmd
prereqs/: install_dkinst_pipx_debian.sh  install_python_as_admin_win.cmd
